--- a/projects/angular2parse/package.json
+++ b/projects/angular2parse/package.json
@@ -9,7 +9,6 @@
   "homepage": "https://github.com/articodeltd/angular2parse#readme",
   "peerDependencies": {
     "@angular/common": "^12.0.0",
-    "@angular/core": "^12.0.0",
-    "tslib": "^2.3.1"
+    "@angular/core": "^12.0.0"
   }
 }
