--- a/projects/angular2parse/package.json
+++ b/projects/angular2parse/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@auscope/angular2parse",
-  "version": "2.0.2",
+  "version": "2.0.3",
   "description": "Fork of articode repo for Angular v13",
   "bugs": {
     "url": "https://github.com/AuScope/angular2parse/issues"
@@ -12,7 +12,7 @@
   },
   "homepage": "https://github.com/AuScope/angular2parse#readme",
   "peerDependencies": {
-    "@angular/common": "^13.0.0",
-    "@angular/core": "^13.0.0"
+    "@angular/common": "~13.3.11",
+    "@angular/core": "~13.3.11"
   }
 }
