--- a/package.json
+++ b/package.json
@@ -1,12 +1,8 @@
 {
-  "name": "@auscope/angular2parse",
-  "version": "2.0.4",
+  "name": "angular2parse",
+  "version": "14.0.0",
   "author": "Articode",
   "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/AuScope/angular2parse/issues"
-  },
-  "homepage": "https://github.com/AuScope/angular2parse#readme",
   "scripts": {
     "ng": "ng",
     "build": "ng build",
@@ -14,24 +10,24 @@
     "lib:publish": "npm run build:prod; cd dist/angular2parse; npm publish"
   },
   "dependencies": {
-    "@angular/common": "~13.3.11",
-    "@angular/compiler": "~13.3.11",
-    "@angular/core": "~13.3.11",
-    "@angular/localize": "~13.3.11",
-    "@angular/platform-browser": "~13.3.11",
-    "@angular/platform-browser-dynamic": "~13.3.11",
+    "@angular/common": "^14.2.12",
+    "@angular/compiler": "^14.2.12",
+    "@angular/core": "^14.2.12",
+    "@angular/localize": "^14.2.12",
+    "@angular/platform-browser": "^14.2.12",
+    "@angular/platform-browser-dynamic": "^14.2.12",
     "rxjs": "~6.6.7",
     "tslib": "^2.4.1",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~13.3.9",
-    "@angular/cli": "~13.3.9",
-    "@angular/compiler-cli": "~13.3.11",
-    "@angular/language-service": "~13.3.11",
+    "@angular-devkit/build-angular": "^14.2.10",
+    "@angular/cli": "^14.2.10",
+    "@angular/compiler-cli": "^14.2.12",
+    "@angular/language-service": "^14.2.12",
     "@types/node": "^13.13.52",
     "codelyzer": "^6.0.2",
-    "ng-packagr": "^13.3.1",
+    "ng-packagr": "^14.2.2",
     "ts-node": "~8.10.2",
     "typescript": "~4.6.4"
   }
