--- a/package.json
+++ b/package.json
@@ -1,34 +1,32 @@
 {
   "name": "angular2parse",
   "version": "15.0.0",
-  "author": "Articode",
-  "license": "MIT",
-  "scripts": {
-    "ng": "ng",
-    "build": "ng build",
-    "build:prod": "ng build --configuration production",
-    "lib:publish": "npm run build:prod; cd dist/angular2parse; npm publish"
+  "description": "Fork of articode repo for Angular v15",
+  "peerDependencies": {
+    "@angular/common": "^15.0.0",
+    "@angular/core": "^15.0.0"
   },
+  "module": "fesm2015/angular2parse.mjs",
+  "es2020": "fesm2020/angular2parse.mjs",
+  "esm2020": "esm2020/angular2parse.mjs",
+  "fesm2020": "fesm2020/angular2parse.mjs",
+  "fesm2015": "fesm2015/angular2parse.mjs",
+  "typings": "index.d.ts",
+  "exports": {
+    "./package.json": {
+      "default": "./package.json"
+    },
+    ".": {
+      "types": "./index.d.ts",
+      "esm2020": "./esm2020/angular2parse.mjs",
+      "es2020": "./fesm2020/angular2parse.mjs",
+      "es2015": "./fesm2015/angular2parse.mjs",
+      "node": "./fesm2015/angular2parse.mjs",
+      "default": "./fesm2020/angular2parse.mjs"
+    }
+  },
+  "sideEffects": false,
   "dependencies": {
-    "@angular/common": "^15.2.10",
-    "@angular/compiler": "^15.2.10",
-    "@angular/core": "^15.2.10",
-    "@angular/localize": "^15.2.10",
-    "@angular/platform-browser": "^15.2.10",
-    "@angular/platform-browser-dynamic": "^15.2.10",
-    "rxjs": "~6.6.7",
-    "tslib": "^2.4.1",
-    "zone.js": "~0.11.4"
-  },
-  "devDependencies": {
-    "@angular-devkit/build-angular": "^15.2.11",
-    "@angular/cli": "^15.2.11",
-    "@angular/compiler-cli": "^15.2.10",
-    "@angular/language-service": "^15.2.10",
-    "@types/node": "^13.13.52",
-    "codelyzer": "^6.0.2",
-    "ng-packagr": "^15.2.2",
-    "ts-node": "~8.10.2",
-    "typescript": "~4.9.3"
+    "tslib": "^2.3.0"
   }
 }
